Modernize desktop trading platform